--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,8 @@
 #Backend WordPress Site URL.
-NEXT_PUBLIC_WORDPRESS_SITE_URL=https://example.com
+NEXT_PUBLIC_WORDPRESS_SITE_URL=https://nanshy.co.uk
 
 #Frontend Next.js Site URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
-WC_CONSUMER_KEY=ck_xx
-WC_CONSUMER_SECRET=cs_xx
+WC_CONSUMER_KEY=ck
+WC_CONSUMER_SECRET=cs
